--- a/Negotiation3/Negotiation3-Info.plist
+++ b/Negotiation3/Negotiation3-Info.plist
@@ -4,6 +4,8 @@
 <dict>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
+	<key>UIViewControllerBasedStatusBarAppearance</key>
+	<true/>
 	<key>CFBundleDisplayName</key>
 	<string>Negotiate360</string>
 	<key>CFBundleExecutable</key>
