--- a/Negotiation3/Negotiation3-Info.plist
+++ b/Negotiation3/Negotiation3-Info.plist
@@ -41,7 +41,7 @@
 		<key>UINavigationBar</key>
 		<dict>
 			<key>Style</key>
-			<string>Black</string>
+			<string>UIBarStyleDefault</string>
 			<key>Translucent</key>
 			<true/>
 		</dict>
